Check for updates and show alerts

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -604,7 +604,7 @@
 
 "IPAD_SIDEBAR_FAVOURITES" = "Favourites";
 
-"IPAD_SIDEBAR_MESSAGES" = "MESSAGES";
+"IPAD_SIDEBAR_MESSAGES" = "Messages";
 
 "IPAD_SIDEBAR_INFO_SECTION_TITLE" = "INFO AND SETTINGS";
 
@@ -635,3 +635,17 @@
 "SETTINGSVIEW_OTHER_EXP_AVATAR_OFFSCREEN_LABEL" = "Enable Off-Screen Render";
 
 "SETTINGSVIEW_OTHER_EXP_AVATAR_SIMPLE_LABEL" = "Use Simple Avatars";
+
+"VERSION_UPDATE_VIEW_VERSION" = "VERSION";
+
+"VERSION_UPDATE_VIEW_RELEASE_DATE" = "RELEASE DATE";
+
+"VERSION_UPDATE_VIEW_WHATS_NEW" = "WHAT'S NEW";
+
+"VERSION_UPDATE_VIEW_MIN_OS_VERSION" = "MIN OS VERSION";
+
+"VERSION_UPDATE_VIEW_GO" = "Update";
+
+"VERSION_UPDATE_VIEW_NAV_TITLE" = "Update Available";
+
+"VERSION_UPDATE_VIEW_CLOSE" = "Close";
