--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -636,3 +636,17 @@
 "SETTINGSVIEW_OTHER_EXP_AVATAR_OFFSCREEN_LABEL" = "启用Off-Screen Render";
 
 "SETTINGSVIEW_OTHER_EXP_AVATAR_SIMPLE_LABEL" = "使用简易头像";
+
+"VERSION_UPDATE_VIEW_VERSION" = "版本";
+
+"VERSION_UPDATE_VIEW_RELEASE_DATE" = "发布日期";
+
+"VERSION_UPDATE_VIEW_WHATS_NEW" = "新增功能";
+
+"VERSION_UPDATE_VIEW_MIN_OS_VERSION" = "系统要求";
+
+"VERSION_UPDATE_VIEW_GO" = "更新";
+
+"VERSION_UPDATE_VIEW_NAV_TITLE" = "更新可用";
+
+"VERSION_UPDATE_VIEW_CLOSE" = "关闭";
