--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -559,7 +559,7 @@
 
 "SETTINGSVIEW_NOTIFICATION_NO_ACCESS_LABEL" = "未授予通知权限";
 
-"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "前往设置 - 通知并打开应用的通知权限。";
+"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "前往设置并打开应用的通知权限。";
 
 "SETTINGSVIEW_NOTIFICATION_NAV_TITLE" = "通知";
 
@@ -621,7 +621,7 @@
 
 "SETTINGSVIEW_OTHER_EXP_FEAT_NAV_TITLE" = "实验性功能";
 
-"SETTINGSVIEW_OTHER_EXP_FEAT_DESCRIPTION" = "下面是一些未经充分测试的实验性功能。若出现问题，请发送反馈。";
+"SETTINGSVIEW_OTHER_EXP_FEAT_DESCRIPTION" = "这是一些未经充分测试的实验性功能。若出现问题，请发送反馈。";
 
 "SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_HEADER" = "图像渲染";
 
