Fix scrolling issue in `HollowDetailView`; update dependencies

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -649,3 +649,5 @@
 "VERSION_UPDATE_VIEW_NAV_TITLE" = "Update Available";
 
 "VERSION_UPDATE_VIEW_CLOSE" = "Close";
+
+"SETTINGSVIEW_NOTIFICATION_GO_TO_SETTINGS" = "Go to Settings";
