--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -650,3 +650,5 @@
 "VERSION_UPDATE_VIEW_NAV_TITLE" = "更新可用";
 
 "VERSION_UPDATE_VIEW_CLOSE" = "关闭";
+
+"SETTINGSVIEW_NOTIFICATION_GO_TO_SETTINGS" = "前往设置";
