--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -629,13 +629,11 @@
 
 "SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_LABEL" = "降低图片渲染质量";
 
-"SETTINGSVIEW_OTHER_EXP_AVATAR_HEADER" = "头像";
+"SETTINGSVIEW_APPEARANCE_AVATAR_HDR" = "头像样式";
 
-"SETTINGSVIEW_OTHER_EXP_AVATAR_FOOTER" = "头像渲染在一些设备上存在问题，若当前使用遇到卡顿等问题，可以尝试打开这些选项。在某些设备上启用Off-Screen Render可能反而会降低刷新率。";
+"SETTINGSVIEW_APPEARANCE_GRAPHICAL_AVATAR_STYLE" = "图像";
 
-"SETTINGSVIEW_OTHER_EXP_AVATAR_OFFSCREEN_LABEL" = "启用Off-Screen Render";
-
-"SETTINGSVIEW_OTHER_EXP_AVATAR_SIMPLE_LABEL" = "使用简易头像";
+"SETTINGSVIEW_APPEARANCE_TEXTUAL_AVATAR_STYLE" = "文字";
 
 "VERSION_UPDATE_VIEW_VERSION" = "版本";
 
@@ -652,3 +650,5 @@
 "VERSION_UPDATE_VIEW_CLOSE" = "关闭";
 
 "SETTINGSVIEW_NOTIFICATION_GO_TO_SETTINGS" = "前往设置";
+
+"SETTINGSVIEW_NOTIFICATION_UPDATE_NOTIFICATION" = "应用更新";
