--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -217,13 +217,22 @@
 "LOGINVIEW_PASSWORD_TEXTFIELD_TITLE" = "密码";
 
 /* No comment provided by engineer. */
-"LOGINVIEW_RESTORE_PASSWORD_ALERT_COPY_EMAIL_BUTTON" = "复制邮箱地址";
+"LOGINVIEW_RESTORE_PASSWORD_ALERT_MESSAGE" = "需要注销已有账户以重置密码。";
 
 /* No comment provided by engineer. */
-"LOGINVIEW_RESTORE_PASSWORD_ALERT_MESSAGE" = "发送邮件到指定邮箱以重置密码。";
+"LOGINVIEW_RESTORE_PASSWORD_ALERT_UNREGISTER_BUTTON" = "注销账户";
 
-/* No comment provided by engineer. */
-"LOGINVIEW_RESTORE_PASSWORD_ALERT_SEND_EMAIL_BUTTON" = "发送邮件";
+"UNREGISTERVIEW_NONCE_FOOTER" = "请输入注册树洞时欢迎邮件中的“找回密码口令”。";
+
+"UNREGISTERVIEW_NONCE_TEXTFIELD_PLACEHOLDER" = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx";
+
+"UNREGISTERVIEW_NONCE_TEXTFIELD_TITLE" = "口令";
+
+"UNREGISTERVIEW_ALERT_MSG" = "注销账户后，原账户的发帖、评论将保留；注销账户后可以重新注册树洞，但原账户的关注列表、评论区昵称等关联数据将丢失。";
+
+"UNREGISTERVIEW_ALERT_CONFIRM" = "确认";
+
+"UNREGISTERVIEW_BUTTON_UNREGISTER" = "注销";
 
 /* No comment provided by engineer. */
 "LOGINVIEW_RESTORE_PASSWORD_ALERT_TITLE" = "重置密码";
@@ -541,8 +550,6 @@
 
 "ABOUTVIEW_OPENSOURCE_NOTICE" = "本应用基于AGPL-3.0协议在GitHub开源。";
 
-"ABOUTVIEW_OPENSOURCE_NOTICE_LICENSE" = "AGPL-3.0协议";
-
 "TIMELINEVIEW_ANNOUNCEMENT_HIDE_BUTTON" = "隐藏";
 
 "SETTINGSVIEW_NOTIFICATION_EDIT_CANCEL" = "取消";
@@ -629,7 +636,7 @@
 
 "SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_LABEL" = "降低图片渲染质量";
 
-"SETTINGSVIEW_APPEARANCE_AVATAR_HDR" = "头像样式";
+"SETTINGSVIEW_APPEARANCE_AVATAR_HDR" = "头像";
 
 "SETTINGSVIEW_APPEARANCE_GRAPHICAL_AVATAR_STYLE" = "图像";
 
@@ -652,3 +659,7 @@
 "SETTINGSVIEW_NOTIFICATION_GO_TO_SETTINGS" = "前往设置";
 
 "SETTINGSVIEW_NOTIFICATION_UPDATE_NOTIFICATION" = "应用更新";
+
+"ABOUTVIEW_GITHUB_REPO_LABEL" = "GitHub 仓库";
+
+"SETTINGSVIEW_APPEARANCE_BLURRED_IMG_BG" = "模糊图片背景";
