--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -632,8 +632,6 @@
 
 "SETTINGSVIEW_OTHER_EXP_FEAT_DESCRIPTION" = "这是一些未经充分测试的实验性功能。若出现问题，请发送反馈。";
 
-"SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_HEADER" = "图像渲染";
-
 "SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_FOOTER" = "降低图片预览的渲染质量。图片查看不受影响。";
 
 "SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_LABEL" = "降低图片渲染质量";
@@ -665,3 +663,11 @@
 "ABOUTVIEW_GITHUB_REPO_LABEL" = "GitHub 仓库";
 
 "SETTINGSVIEW_APPEARANCE_BLURRED_IMG_BG" = "模糊图片背景";
+
+"HOLLOWDETAIL_COMMENTS_ORDER_OLD_TO_NEW" = "顺序";
+
+"HOLLOWDETAIL_COMMENTS_ORDER_NEW_TO_OLD" = "倒序";
+
+"SETTINGSVIEW_OTHER_EXP_FIX_SCROLL_LABEL" = "修复详情界面滑动问题";
+
+"SETTINGSVIEW_OTHER_EXP_FIX_SCROLL_FOOTER" = "此模式打开时无法进行评论跳转。";
