--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -671,3 +671,5 @@
 "SETTINGSVIEW_OTHER_EXP_FIX_SCROLL_LABEL" = "修复详情界面滑动问题";
 
 "SETTINGSVIEW_OTHER_EXP_FIX_SCROLL_FOOTER" = "此模式打开时无法进行评论跳转。";
+
+"COMMENT_VIEW_SHOW_ONLY_LABEL" = "仅显示此人评论";
