--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -672,3 +672,11 @@
 "SETTINGSVIEW_OTHER_EXP_FIX_SCROLL_FOOTER" = "Jump to certain comment is not supported in this mode.";
 
 "COMMENT_VIEW_SHOW_ONLY_LABEL" = "Show this Person Only";
+
+"WIDGET_DISPLAY_NAME" = "Trending";
+
+"WIDGET_DESCRIPTION" = "Show trending posts.";
+
+"WIDGET_EMPTY_LABEL" = "No Content";
+
+"WIDGET_EMPTY_MSG" = "Internet connection or login status has failed.";
