--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -659,9 +659,9 @@
 
 "SETTINGSVIEW_APPEARANCE_BLURRED_IMG_BG" = "Blurred Image Background";
 
-"HOLLOWDETAIL_COMMENTS_ORDER_OLD_TO_NEW" = "Old to New";
+"HOLLOWDETAIL_COMMENTS_ORDER_OLD_TO_NEW" = "OLD TO NEW";
 
-"HOLLOWDETAIL_COMMENTS_ORDER_NEW_TO_OLD" = "New to Old";
+"HOLLOWDETAIL_COMMENTS_ORDER_NEW_TO_OLD" = "NEW TO OLD";
 
 "COMMENT_VIEW_SHOW_ONLY_LABEL" = "Show this Person Only";
 
