Search in detail view; UI update

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -674,3 +674,7 @@
 "WIDGET_EMPTY_MSG" = "Internet connection or login status has failed.";
 
 "SEARCHVIEW_TRENDING_TITLE" = "Trending";
+
+"DETAILVIEW_SEARCH_BAR_PROMPT" = "Search in comments...";
+
+"DETAILVIEW_SEARCH_MENU_TITLE" = "Search";
