Fix `WanderView`; UI enhancement

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -678,3 +678,5 @@
 "DETAILVIEW_SEARCH_BAR_PROMPT" = "Search in comments...";
 
 "DETAILVIEW_SEARCH_MENU_TITLE" = "Search";
+
+"ABOUTVIEW_OPENSOURCE_TITLE" = "Open Source";
