--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -674,4 +674,6 @@
 
 "WIDGET_EMPTY_MSG" = "网络连接失败或登录状态失效";
 
-"DETAILVIEW_SEARCH_BAR_PROMPT" = "搜索";
+"DETAILVIEW_SEARCH_BAR_PROMPT" = "在评论中搜索...";
+
+"DETAILVIEW_SEARCH_MENU_TITLE" = "搜索";
