--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -494,7 +494,7 @@
 
 "SETTINGSVIEW_CONTENT_NAV_TITLE" = "内容";
 
-"SETTINGSVIEW_CONTENT_FOLD_SECTION_FOOTER" = "刷新界面以应用更改。";
+"SETTINGSVIEW_CONTENT_FOLD_SECTION_FOOTER" = "含有这些标签的树洞将在时间轴、随机漫步和热榜中被折叠。";
 
 "SETTINGSVIEW_CONTENT_FOLD_CELL" = "折叠预设标签";
 
@@ -502,7 +502,7 @@
 
 "SETTINGSVIEW_CONTENT_CUSTOM_FOLD_SECTION_ADD_MORE_BUTTON" = "添加";
 
-"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_INVALID_ALERT_TITLE" = "标签不能为空或与已存在的标签相同";
+"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_INVALID_ALERT_TITLE" = "标签（屏蔽词）不能为空或与已存在的标签（屏蔽词）相同";
 
 "SETTINGSVIEW_CONTENT_CUSTOM_FOLD_TEXTFIELD_PLACEHOLDER" = "输入自定义折叠标签";
 
@@ -681,3 +681,11 @@
 "DETAILVIEW_SEARCH_MENU_TITLE" = "搜索";
 
 "ABOUTVIEW_OPENSOURCE_TITLE" = "开源";
+
+"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_HEADER" = "屏蔽词";
+
+"SETTINGSVIEW_CONTENT_BLOCK_WORDS_TEXTFIELD_PLACEHOLDER" = "输入屏蔽词";
+
+"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "包含至少一个屏蔽词的树洞将不会出现在时间轴和随机漫步中。";
+
+"SETTINGSVIEW_CONTENT_FOOTER" = "刷新界面以应用更改。";
