--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -685,6 +685,6 @@
 
 "SETTINGSVIEW_CONTENT_BLOCK_WORDS_TEXTFIELD_PLACEHOLDER" = "Enter a keyword";
 
-"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "Post that contains at least one of the keywords will not appear in Timeline and Wandear.";
+"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "Post that contains at least one of the keywords will not appear in Timeline, Wander and Trending.";
 
 "SETTINGSVIEW_CONTENT_FOOTER" = "Refresh to apply the changes.";
