--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -686,6 +686,6 @@
 
 "SETTINGSVIEW_CONTENT_BLOCK_WORDS_TEXTFIELD_PLACEHOLDER" = "输入屏蔽词";
 
-"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "包含至少一个屏蔽词的树洞将不会出现时间轴、随机漫步和热榜中。";
+"SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "包含至少一个屏蔽词的树洞将不会出现在时间轴、随机漫步和热榜中。";
 
 "SETTINGSVIEW_CONTENT_FOOTER" = "刷新界面以应用更改。";
