--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -693,3 +693,7 @@
 "SETTINGSVIEW_CONTENT_BLOCK_WORDS_SECTION_FOOTER" = "包含至少一个屏蔽词的树洞将不会出现在时间轴、随机漫步和热榜中。";
 
 "SETTINGSVIEW_CONTENT_FOOTER" = "刷新界面以应用更改。";
+
+"ACCOUNTVIEW_FORCE_LOGOUT_BUTTON" = "强制注销";
+
+"ACCOUNTVIEW_FORCE_LOGOUT_MSG" = "当服务器出现故障，无法正常注销时，请选择“强制注销”。";
